--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <script src = "script.js" defer></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Wordle PPY</title>
 </head>
 <body>
     <h1>Wordle PPY</h1>
